[gd_scene load_steps=10 format=3 uid="uid://ddrf7tn7wllpa"]

[ext_resource type="Script" uid="uid://cavaqrap04deg" path="res://BOSS_chapter1/boss_chapter_1.gd" id="1_2187m"]

[sub_resource type="Gradient" id="Gradient_2187m"]
offsets = PackedFloat32Array(0, 0.36666667, 0.67333335, 0.70666665, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.49803922, 0, 0, 1, 1, 0, 0, 1, 0.41568628, 0.41568628, 0.41568628, 0, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3wwt7"]
gradient = SubResource("Gradient_2187m")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_hcxih"]
radius = 30.265491

[sub_resource type="Gradient" id="Gradient_ayotx"]
offsets = PackedFloat32Array(0, 0.6066667, 0.64, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tdwbb"]
gradient = SubResource("Gradient_ayotx")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_2187m"]
radius = 8.062258

[sub_resource type="Gradient" id="Gradient_3wwt7"]
offsets = PackedFloat32Array(0, 0.08, 0.27333334)
colors = PackedColorArray(1, 0, 0, 0.6901961, 1, 0, 0, 0.6745098, 1, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hcxih"]
gradient = SubResource("Gradient_3wwt7")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="BOSS_Chapter1" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_2187m")

[node name="MainSprite" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_3wwt7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hcxih")

[node name="OrbitalPivot" type="Node2D" parent="."]

[node name="FistHolder" type="Node2D" parent="OrbitalPivot"]

[node name="MovableBody" type="Sprite2D" parent="OrbitalPivot/FistHolder"]
scale = Vector2(0.3, 0.3)
texture = SubResource("GradientTexture2D_tdwbb")

[node name="FistHitbox" type="Area2D" parent="OrbitalPivot/FistHolder"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OrbitalPivot/FistHolder/FistHitbox"]
shape = SubResource("CircleShape2D_2187m")

[node name="FistVFX" type="CPUParticles2D" parent="OrbitalPivot/FistHolder"]
texture = SubResource("GradientTexture2D_hcxih")
gravity = Vector2(0, 0)

[node name="ShieldVisual" type="Sprite2D" parent="."]

[node name="DanmakuSpawnPoint" type="Marker2D" parent="."]

[node name="EntityContainer" type="Node" parent="."]

[connection signal="body_entered" from="OrbitalPivot/FistHolder/FistHitbox" to="." method="_on_fist_hitbox_body_entered"]
